<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/gpsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="378dp"
        android:text="TextView" />

    <Button
        android:id="@+id/btnSnap2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="298dp"
        android:layout_marginBottom="25dp"
        android:onClick="search"
        android:text="@string/button_search" />

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/alert_light_frame" />

    <Button
        android:id="@+id/btnSnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="26dp"
        android:onClick="takePicture"
        android:text="SNAP" />

    <EditText
        android:id="@+id/editTextCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivGallery"
        android:layout_alignParentStart="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Enter Caption" />

    <Button
        android:id="@+id/buttonSaveCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editTextCaption"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="33dp"
        android:onClick="saveCaption"
        android:text="SAVE" />

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextCaption"
        android:layout_alignParentStart="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="77dp"
        android:onClick="Left"
        android:text="Left" />

    <Button
        android:id="@+id/buttonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextCaption"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="46dp"
        android:onClick="Right"
        android:text="Right" />

    <TextView
        android:id="@+id/DatetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="356dp"
        android:text="TextView" />

</RelativeLayout>